# fmsim

./: .gitignore  Cargo.toml  README.md  TODO.md
data/: FMDatabase.db  cards.json  duelists.json
fmsim/data/: cardstest.json
fmsim/src/duel/: command.rs  field.rs  mod.rs  state.rs
fmvis/: Cargo.toml
fmvis/src/: main.rs
src/: duel.rs  lib.rs  main.rs  schema.rs
src/data/: base_card.rs  card.rs  duelist.rs  guardian_star.rs  mod.rs  models.rs  monster.rs  schema.rs  spell.rs  terrain.rs
src/duel/: active_card.rs  command.rs  command_builder.rs  command_builder_bak.rs  command_strategy.rs  deck.rs  field.rs  mod.rs  player.rs  state.rs  test.rs
