[package]
name = "fmsim"
version = "0.1.0"
edition = "2021"
default-run = "fmsim"  # Add this line

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
derive_builder = "0.12.0"
dioxus = "0.4.0"
dioxus-desktop = "0.4.0"
dioxus-tui = "0.4.0"
enum_dispatch = "0.3.12"
itertools = "0.11.0"
num-derive = "0.4.0"
num-traits = "0.2.16"
rand = "0.8.5"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
thiserror = "1.0.48"